--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,25 +19,24 @@ layout: compress
                         <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
                     </a>
                     <h3 class="title">
-                        <a class="zoombtn" href="{{ site.url }}">
-                        	<p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
-			            </a>
+                      <a class="zoombtn" href="{{ site.url }}">
+                        <p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
+                      </a>
                     </h3>
                     <hr class="hr-line">
                     <h3 class="title">
-                        <a href="{{ site.url }}">
-                        	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
-			            </a>
+                      <a href="{{ site.url }}">
+                        <p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
+                      </a>
                     </h3>
-                    {% include social-links.html %}
-                  <hr class="hr-line">
-                  <h3 class="title">
-                         <a class="btn zoombtn" href="/about">About</a>
+                    <h3 class="title">
+                         <a class="btn zoombtn" href="/about">About me</a>
                          <!--
                          <a class="btn zoombtn" href="{{ site.url }}/posts">Posts</a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">Projects</a>
                          -->
-                 </h3>
+                    </h3>
+                    {% include social-links.html %}
             </div>
         </div>
     </header>
