add facebook message

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,12 +30,15 @@ layout: compress
                       </a>
                     </h3>
                     <h3 class="title">
-                         <a class="btn zoombtn" href="/about">About me</a>
+                        <a class="btn zoombtn" href="/about">About me</a>
                          <!--
                          <a class="btn zoombtn" href="{{ site.url }}/posts">Posts</a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">Projects</a>
                          -->
                     </h3>
+                    <p style="font-size:1rem;font-weight:300">
+                      御用の方は、<a href="http://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener noreferrer">Facebook</a>よりご連絡ください。
+                    </p>
                     {% include social-links.html %}
             </div>
         </div>
